# n-body_problem_solar-system_simulation

./: .gitignore  LICENSE  README.md  docker-compose.yml
src/python/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/python/src/: main.py
src/python/src/cli/: Nasa_simulation.py  __init__.py  fortran_Nasa_insert.py  fortran_manual_insert.py
src/python/src/entities/api_requests/: __init__.py
src/python/src/entities/api_requests/NASA/: Horizons_File.py  Horizons_Lookup.py  JD_Date_Time_Convert.py  __init__.py
src/python/src/entities/data_mining/: __init__.py
src/python/src/entities/data_mining/NASA/: __init__.py  gmass.py  initial_state.py  mass.py  period.py  state.py
src/python/src/entities/data_mining/interfaces/: __init__.py  gmass.py  initial_state.py  mass.py  period.py  state.py
src/python/src/entities/interfaces/: Body_Features.py  JD_Date_Time_Convert.py  SPKID_Search.py  __init__.py
src/python/src/entities/json_to_object/: Horizons_Lookup.py  JD_Date_Time_Convert.py  NASA_simulation_config.py  __init__.py  fortran_simulation_manual_insert_initial_condition.py  fortran_simulation_with_NASA_initial_condition_config.py  report.py
src/python/src/entities/json_to_object/tests/: conftest.py  test_Horizons_Lookup.py  test_JD_Date_Time_Convert.py  test_NASA_simulation_config.py  (+3 more)
src/python/src/use_cases/body_features/: NASA_Report.py  __init__.py
src/python/src/use_cases/execute_binary/: __init__.py  fortran_n_body.py
src/python/src/writing_data/input/: __init__.py
src/python/src/writing_data/output/: Nasa_simulation.py  __init__.py
(+41 files in other folders)
